--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,17 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+const pageTitle = "contact";
 ---
 
 <Layout title="Welcome to Radha Joshi's website.">
 	<main>
 	
 		<h1>Welcome to <span class="text-gradient">radhajoshi.com</span></h1>
-		
+		<a href="/">Home</a>
+    <a href="/about/">About</a>
+    <a href="/contact/">contact</a>
+	<a href="/random/">random</a>
 	</main>
 </Layout>
 
